Add pattern API endpoint
