# src/ansible_dev_tools/resources/server/creator_v2.py
@@ -129,6 +129,27 @@ class CreatorFrontendV2:
             response=response,
         )
 
+    def pattern(self, request: HttpRequest) -> FileResponse | HttpResponse:
+        """Add a pattern.
+
+        Args:
+            request: HttpRequest object.
+
+        Returns:
+            File or error response.
+        """
+        result = validate_request(request)
+        if isinstance(result, HttpResponse):
+            return result
+        with tempfile.TemporaryDirectory() as tmp_dir:
+            tar_file = CreatorBackend(Path(tmp_dir)).pattern(**result.body)  # type: ignore[arg-type]
+            response = self._response_from_tar(tar_file)
+
+        return validate_response(
+            request=request,
+            response=response,
+        )
+
 
 class CreatorOutput(Output):
     """The creator output."""
@@ -236,5 +257,31 @@ class CreatorBackend:
         )
         Add(config).run()
         tar_file = self.tmp_dir / "devfile.tar"
+        create_tar_file(add_path, tar_file)
+        return tar_file
+
+    def pattern(self, pattern_name: str) -> Path:
+        """Scaffold a pattern.
+
+        Args:
+            pattern_name: Name of the pattern to add.
+
+        Returns:
+            The tar file path.
+        """
+        # Path where the pattern will be scaffolded.
+        add_path = self.tmp_dir / pattern_name
+        add_path.mkdir(parents=True, exist_ok=True)
+
+        config = Config(
+            creator_version=creator_version,
+            path=str(add_path),
+            output=CreatorOutput(log_file=str(self.tmp_dir / "creator.log")),
+            subcommand="add",
+            resource_type="pattern",
+            overwrite=True,
+        )
+        Add(config).run()
+        tar_file = self.tmp_dir / f"{pattern_name}.tar"
         create_tar_file(add_path, tar_file)
         return tar_file
